AdminShiftsCombinedRounds states behave correctly and can be deselected when clicked on again

--- a/client/components/admin-shifts-display.css
+++ b/client/components/admin-shifts-display.css
@@ -103,11 +103,11 @@
 .shiftWeekIndividualDayLink {
   color: black;
 }
-.shiftRowContainer {
+/* .shiftRowContainer {
     position: relative;
     border: 1px solid black;
     margin-top: 10px;
-}
+} */
 .dayRowFill {
     background-color: rgb(255, 255, 255);
     height: 100%;
@@ -155,11 +155,11 @@
     width: 100%;
     font-size: 14px;
 }
-.shift{
+/* .shift{
     width: 10%;
     height: 100%;
-    position: absolute;
-}
+    /* position: absolute; */
+/* } */
 .scheduled {
     background-color: rgb(2, 2, 66);
 }
